--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
+  },
+  "volta": {
+    "node": "18.13.0",
+    "npm": "9.3.1"
   }
 }
